Prevent overscroll on ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,3 +27,9 @@
   position: absolute;
   width: 100%;
 }
+
+html,
+body {
+  position: fixed;
+  overflow: hidden;
+}
